# mangadex-api

./: .gitignore  Cargo.toml  README.md  wrapper.yml
.github/workflows/: clippy.yaml  docs.yaml  rust.yaml  test.yaml
mangadex-api/: Cargo.toml
mangadex-api-macro/: Cargo.toml
mangadex-api-macros/: Cargo.toml
mangadex-api-macros/src/: lib.rs
mangadex-api-serde/: .gitignore  Cargo.toml
mangadex-api/src/: client_impls.rs  prelude.rs
mangadex-api/src/json/: mod.rs
src/: client.rs  client_impls.rs  endpoint.rs  lib.rs  prelude.rs  types.rs  util.rs  wrapper.rs
src/at_home/: mod.rs
src/chapter/: get.rs
src/config/: mod.rs
src/json/: at_home.rs  athome.rs  author.rs  chapter.rs  cover.rs  error.rs  manga.rs  mod.rs  statistics.rs  tag.rs  types.rs
src/json/at_home/: mod.rs
src/json/author/: get.rs  mod.rs
src/json/author/get/: list.rs  mod.rs
src/json/chapter/: get.rs  mod.rs
src/json/cover/: get.rs  mod.rs
src/json/manga/: get.rs  mod.rs
src/json/manga/get/: feed.rs  list.rs  mod.rs
src/manga/: get.rs  mod.rs
src/util/: mod.rs  tauri.rs
src/wrapper/: get.rs  mod.rs
tests/: athome.rs  author.rs  chapter.rs  client.rs  cover.rs  manga.rs  statistics.rs
