[package]
name = "mangadex-api"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["macros"] }
async-trait = "0.1.68"
reqwest = { version = "0.11.18", features = ["json"] }
reqwest-middleware = "0.2.2"
http-cache-reqwest = "0.10.0"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["serde"] }
anyhow = "1.0.71"

async-trait = { version = "0.1.68", optional = true }
reqwest = { version = "0.11.18", features = ["json"], optional = true }
reqwest-middleware = { version = "0.2.2", optional = true }
http-cache-reqwest = { version = "0.10.0", optional = true }

[features]
# wrapper = ["async-trait", "reqwest", "http-cache-reqwest", "reqwest-middleware"]
