[package]
name = "mangadex-api"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1.28.2", default-features = false, features = ["full"] }

[dependencies]
anyhow = { version = "1.0.71", default-features = false, optional = true }

http-cache-reqwest = { version = "0.10.0", default-features = false, optional = true }
reqwest = { version = "0.11.18", default-features = false, features = ["json"], optional = true }
reqwest-middleware = { version = "0.2.2", default-features = false, optional = true }

serde = { version = "1.0.164", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false }
url = { version = "2.4.0", default-features = false, features = ["serde"] }
uuid = { version = "1.3.4", default-features = false, features = ["serde"] }

[features]
default = ["wrapper", "dl"]
reqwest = ["anyhow", "dep:reqwest", "reqwest-middleware", "http-cache-reqwest"]
wrapper = ["reqwest"]
dl = ["reqwest"]
