[package]
name = "mangadex-api"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1.29.1", default-features = false, features = ["full"] }

[dependencies]
anyhow = { version = "1.0.71", default-features = false }
async-trait = { version = "0.1.68", default-features = false }
dirs = "5.0.1"

http-cache-reqwest = { version = "0.10.0", default-features = false, features = ["manager-cacache"] }
lazy_static = { version = "1.4.0" }
reqwest = { version = "0.11.18", features = ["json"] }
reqwest-middleware = { version = "0.2.2", default-features = false }

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
url = { version = "2.4.0", default-features = false, features = ["serde"] }
uuid = { version = "1.3.4", default-features = false, features = ["serde"] }

mangadex-api-macros = { path = "./mangadex-api-macros" }
mangadex-api-serde = { path = "./mangadex-api-serde" }

[features]
# default = ["wrapper", "dl"]
# reqwest = ["anyhow", "lazy_static", "dep:reqwest", "reqwest-middleware", "http-cache-reqwest"]
# wrapper = ["reqwest"]
# dl = ["wrapper"]
